# chip-8

./: Cargo.toml  LICENSE  README.md  improvements.md  notes.md
src/: cpu.rs  fonts.rs  main.rs  old  tests.rs
